--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel = "stylesheet" href = "styles.css" />
     </head>
     <body>
         <h1>hannah</h1>
-        <p>los altos hackathon!!</p>
-        <p>yay</p>
+        <p>hi</p>
+        <p>.</p>
+        
         <img src = "https://cdn140.picsart.com/244460125016212.png?r1024x1024" style = "width:100px;height:121px;">
         
     </body>
