Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <form>
             ^me running away from my problems lol<p></p>
-            type them in so that they disappear :) <p></p>
+            type them in and press the button so that they disappear :) <p></p>
             <textarea rows="5"></textarea> <p></p>
             <input type="reset">
         </form>
